--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -1,5 +1,11 @@
 {{>layout/header}}
 <h1>Paper View</h1>
-<a href="/login" role="button" class="btn btn-primary">Login</a>
-<a href="/sign-up" role="button" class="btn btn-primary">Sign Up</a>
+{{#userName }}
+    Logged in as: <span id="user">{{userName}}</span>
+    
+{{/userName}}
+{{^userName }}
+    <a href="/login" role="button" class="btn btn-primary">Login</a>
+    <a href="/signup" role="button" class="btn btn-primary">Sign Up</a>
+{{/userName}}
 {{>layout/footer}}
