--- a/src/main/resources/templates/layout/footer.mustache
+++ b/src/main/resources/templates/layout/footer.mustache
@@ -2,5 +2,6 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 <!--home.mustache 추가-->
+<script src="js/account/account.js"></script>
 </body>
 </html>
