--- a/src/main/resources/templates/login.mustache
+++ b/src/main/resources/templates/login.mustache
@@ -12,7 +12,7 @@
                 <input type="text" class="form-control" id="password" placeholder="비밀번호를 입력하세요">
             </div>
         </form>
-        <button type="button" class="btn btn-primary" id="btn-save">로그인</button>
+        <button type="button" class="btn btn-primary" id="btn-login">로그인</button>
     </div>
 </div>
 
